# Pollek

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  FIRST_RUN_UX.md  FIX_CI_AND_RELEASE.md  INSTALL.md  MAINTAINERS.md  NOTICE  POLLEK_POLICY_DEPLOY_ROUTING_ENFORCEMENT_OBSERVE_PLAN_2026-06-24.md  POLLEK_POLICY_FIRST_PEP_TRANSPARENT_DESKTOP_FLOW_PLAN_2026-06-24.md  POLLEN_AGENT_GOVERNANCE_WALKTHROUGH.md  README.md  RELEASE_NOTES_v1.0.0-beta.5.md  SECURITY-INSIGHTS.yml  SECURITY.md  check_jobs.py  clippy_output.json  dek-rollback.service  deny.toml  docker-compose.yml  mlc_config.json  pollek-dek.service  pollen-local.db  seg-demo.pds
crates/acceptance-tests/: Cargo.toml  acceptance-tests.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/acceptance-tests/src/: lib.rs
crates/acceptance-tests/tests/: desktop_fallback_test.rs  local_e2e.rs  local_environment_fixtures.rs  matrix_a_to_k.rs  offline_mode.rs  policy_first_ux_tests.rs  soak.rs
crates/cert-gen/: Cargo.toml  cert-gen.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/cert-gen/src/: main.rs
crates/contract-conformance/: Cargo.toml
crates/contract-conformance/src/: lib.rs
crates/dek-a2a-mediator/: Cargo.toml
crates/dek-activation/: Cargo.toml  dek-activation.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-activation/src/: coordinator.rs  signature.rs  snapshot.rs
crates/dek-agent-binding/: Cargo.toml
crates/dek-agent-binding/src/: binding.rs  capability.rs  control.rs  enforce.rs  lib.rs  telemetry.rs
crates/dek-agent-connector/: Cargo.toml  dek-agent-connector.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-agent-connector/src/: lib.rs
crates/dek-agent-discovery/: Cargo.toml
crates/dek-agent-discovery/data/: agent_signatures.v2.json
crates/dek-agent-discovery/src/: aggregator.rs  api.rs  browser_scan.rs  browser_session_reader.rs  capability_inventory.rs  capability_retrieval.rs  cli_agent_scan.rs  config.rs  config_paths.rs  container_scan.rs  fingerprint.rs  human_loop.rs  ide_extension_scan.rs  identity.rs  lib.rs  local_model_probe.rs  mcp_config.rs  mcp_scan.rs  model.rs  orchestrator.rs  process_scan.rs  redaction.rs  refactor_timeout.py  signature_match.rs  source_catalog.rs  web_ai_scan.rs
crates/dek-agent-discovery/tests/: fixture_test.rs
crates/dek-agent-observer/: Cargo.toml
crates/dek-agent-observer/src/: activity.rs  agent_correlator.rs  aggregate.rs  binding_store.rs  browser_scope.rs  correlate.rs  cost.rs  coverage.rs  egress_parser.rs  ingest.rs  lib.rs  model.rs  otel.rs  trust.rs  usage_budget.rs  usage_cost.rs  usage_model.rs  usage_normalizer.rs
crates/dek-auth/: Cargo.toml  dek-auth.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-auth/src/: lib.rs
crates/dek-bundle-format/: Cargo.toml  dek-bundle-format.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-bundle-format/src/: contract.rs  lib.rs
crates/dek-bundle-sync/: Cargo.toml  dek-bundle-sync.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-bundle-sync/src/: keys.rs  lib.rs  rollback.rs  sig_test.rs
crates/dek-capability-registry/: Cargo.toml  dek-capability-registry.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-capability-registry/src/: detect.rs  lib.rs
crates/dek-cedar/: Cargo.toml  dek-cedar.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-cedar/src/: lib.rs
crates/dek-cli/: Cargo.toml  dek-cli.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-cli/src/: main.rs
crates/dek-cli/tests/: enrollment_e2e.rs
crates/dek-compliance-evidence/: Cargo.toml
crates/dek-compliance-evidence/src/: lib.rs
crates/dek-config/: Cargo.toml  dek-config.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-config/src/: lib.rs  logging.rs  paths.rs  scale_config.rs
crates/dek-consent/: Cargo.toml
crates/dek-control-plane-api/: Cargo.toml  dek-control-plane-api.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-control-plane-api/src/: agents.rs  bundle.rs  lib.rs  registry.rs  telemetry.rs
crates/dek-core/: Cargo.toml  dek-core.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-core/src/: api.rs  bundle_loop.rs  capabilities.rs  ebpf.rs  ipc_server.rs  kernel_guard.rs  keystore_migration.rs  main.rs  network_loop.rs  pep_warm_check.rs  probation.rs  reload_coordinator.rs  service_integration.rs  supervisor.rs  svid_renewal.rs  updater.rs
crates/dek-core/tests/: e2e_mock_cloud.rs  inventory_test.rs
crates/dek-core/wix/: main.wxs
crates/dek-decision/: Cargo.toml  dek-decision.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-decision/src/: lib.rs
crates/dek-domain-schema/: Cargo.toml  dek-domain-schema.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-domain-schema/src/: agent.rs  bundle.rs  capabilities.rs  core_objects.rs  decision.rs  dek_device.rs  deployment_session.rs  ebpf.rs  entity.rs  entity_card.rs  feasibility.rs  lib.rs  mcp_server.rs  pep_deployment.rs  policy.rs  policy_target.rs  principal.rs  relationship.rs  resource.rs  spiffe.rs  telemetry.rs  telemetry_event.rs  tenant.rs  tool.rs  user_event.rs
crates/dek-domain-schema/tests/: bundle_tests.rs  schema_tests.rs  (+1 more)
crates/dek-ebpf-common/: Cargo.toml  dek-ebpf-common.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-ebpf-prog/: Cargo.toml
crates/dek-ebpfd/: Cargo.toml  build.rs
crates/dek-enforcement-api/: Cargo.toml  dek-enforcement-api.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-enroll/: Cargo.toml  dek-enroll.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
crates/dek-entity-registry/: Cargo.toml  dek-entity-registry.cdx.json  pollen-dek-sbom.json  pollen-dek-sbom.json.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_policy_preset_render.rs
(+811 files in other folders)
