[workspace]
members = [
    "crates/*",
    "plugins/*",
    "crates/dek-ext-authz",
    "crates/dek-router-builder",
    "crates/dek-updater"
]
exclude = [
    "crates/dek-ebpf-prog",
    "crates/dek-ebpfd"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
