[workspace]
members = [
    "crates/*",
    "plugins/*"
]
exclude = [
    "crates/dek-ebpf-prog",
    "crates/dek-ebpfd"
]
resolver = "2"

[workspace.package]
version = "1.0.0-beta.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AECInfraconnect/AntiG_Pollen_DEK"
authors = ["AEC Infraconnect <info@aecinfraconnect.com>"]
rust-version = "1.70"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
arc-swap = "1.7"
chrono = "0.4"
dek-pdp-sdk = { path = "crates/dek-pdp-sdk" }

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "allow"
print_stderr = "allow"


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
