[workspace]
members = [
    "crates/*",
    "plugins/*",
    "contracts/generated/rust/pollek-contract",
    "crates/dek-agent-observer",
    "crates/dek-resilience",
    "crates/dek-a2a-mediator",
    "crates/dek-execution-sandbox",
    "crates/dek-policy-presets"
, "examples/plugin-hello-world"]
exclude = [
    "crates/dek-ebpf-prog",
    "fuzz"
]
resolver = "2"

[workspace.package]
version = "1.0.0-beta.10"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AECInfraconnect/Pollek"
authors = ["AEC Infraconnect <info@aecinfraconnect.com>"]
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
arc-swap = "1.7"
chrono = "0.4"
dek-pdp-sdk = { path = "crates/dek-pdp-sdk" }
thiserror = "2"
jsonschema = { version = "0.46.5", default-features = false }
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.release.package.dek-cli]
opt-level = "s"

[profile.release.package.dek-updater]
opt-level = "s"

[profile.release.package.dek-spool-cli]
opt-level = "s"

[profile.test]
debug = 0

[profile.dev]
debug = 0
