[package]
name = "pollen-dek-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dek-activation = { path = "../crates/dek-activation" }
dek-mcp-normalizer = { path = "../crates/dek-mcp-normalizer" }
dek-policy-presets = { path = "../crates/dek-policy-presets" }
serde_json = "1.0"

[[bin]]
name = "bundle_parser"
path = "fuzz_targets/bundle_parser.rs"
test = false
doc = false

[[bin]]
name = "normalize"
path = "fuzz_targets/normalize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_policy_preset_render"
path = "fuzz_targets/fuzz_policy_preset_render.rs"
test = false
doc = false

