[package]
name = "acceptance-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sysinfo = "0.30.12"
