[package]
license = {workspace = true}

name = "acceptance-tests"
version = "0.1.0"
edition = {workspace = true}

publish = false
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}

[dependencies]
tokio = { workspace = true, features = ["process", "rt-multi-thread"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
dek-capability-registry = { path = "../dek-capability-registry" }
dek-deployment-planner = { path = "../dek-deployment-planner" }
dek-domain-schema = { path = "../dek-domain-schema" }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
sysinfo = "0.39.5"
tracing.workspace = true


[lints]
workspace = true
