[package]
license = {workspace = true}

name = "cert-gen"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[dependencies]
rcgen = "0.13"
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true

