[package]
name = "contract-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true
axum = "0.8"
jsonschema.workspace = true

[lints]
workspace = true
