[package]
name = "dek-a2a-mediator"
version = "1.0.0-beta.10"
edition = "2021"
license = "Apache-2.0"
description = "Inter-Agent Trust Protocol (IATP) Mediator for A2A communication"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["rt", "macros", "sync", "time"] }
dek-agent-observer = { path = "../dek-agent-observer" }
dek-control-plane-api = { path = "../dek-control-plane-api" }
ed25519-dalek = { version = "3.0", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
dek-telemetry = { path = "../dek-telemetry" }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
[lints]
workspace = true
