[package]
name = "dek-a2a-mediator"
version = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
description = "Inter-Agent Trust Protocol (IATP) Mediator for A2A communication"
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["rt", "macros", "sync", "time"] }
dek-agent-observer = { path = "../dek-agent-observer" }
dek-control-plane-api = { path = "../dek-control-plane-api" }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
dek-telemetry = { path = "../dek-telemetry" }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
[lints]
workspace = true
