[package]
license = "Apache-2.0"

name = "dek-activation"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_jcs = "0.2.0"
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }

dek-config = { path = "../dek-config" }
dek-policy-router = { path = "../dek-policy-router" }
dek-router-builder = { path = "../dek-router-builder" }
dek-plugin-host = { path = "../dek-plugin-host" }
dek-openfga = { path = "../dek-openfga" }
dek-cedar = { path = "../dek-cedar" }
dek-auth = { path = "../dek-auth" }
dek-wasm-host = { path = "../dek-wasm-host" }
jsonwebtoken = "9.3.1"
ed25519-dalek = "3.0.0"
base64 = "0.22.1"
sha2 = "0.11.0"
hex = "0.4.3"

[lints]
workspace = true

