[package]
name = "dek-agent-binding"
version = "1.0.0-beta.10"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.4", features = ["v4"] }
dek-fingerprint-defs = { path = "../dek-fingerprint-defs" }
reqwest = { version = "0.12", features = ["json"] }
