[package]
name = "dek-agent-binding"
version = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.4", features = ["v4"] }
dek-fingerprint-defs = { path = "../dek-fingerprint-defs" }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "process"] }

[lints]
workspace = true
