[package]
license = "Apache-2.0"

name = "dek-agent-connector"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dek-agent-binding = { path = "../dek-agent-binding" }
dek-agent-observer = { path = "../dek-agent-observer" }

[lints]
workspace = true

