[package]
license = {workspace = true}

name = "dek-agent-connector"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dek-agent-binding = { path = "../dek-agent-binding" }
dek-agent-observer = { path = "../dek-agent-observer" }

[lints]
workspace = true

