[package]
name = "dek-agent-discovery"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
url = "2"
sysinfo = "0.33"
dek-control-plane-api = { path = "../dek-control-plane-api" }
dek-domain-schema = { path = "../dek-domain-schema" }
thiserror.workspace = true
reqwest.workspace = true

[lints]
workspace = true
