[package]
name = "dek-agent-discovery"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
url = "2"
sysinfo = "0.39"
dek-control-plane-api = { path = "../dek-control-plane-api" }
dek-domain-schema = { path = "../dek-domain-schema" }
dek-fingerprint-defs = { path = "../dek-fingerprint-defs" }
dek-policy-presets = { path = "../dek-policy-presets" }
dek-consent = { path = "../dek-consent" }
dek-config = { path = "../dek-config" }
thiserror.workspace = true
reqwest.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3.32"
glob = "0.3"
dirs = "5.0"
metrics = "0.24.6"
lz4_flex = "0.11"

[lints]
workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
