[package]
name = "dek-agent-observer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dek-agent-binding = { path = "../dek-agent-binding" }

[lints]
workspace = true
