[package]
name = "dek-agent-observer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
pollek-contract = { path = "../../contracts/generated/rust/pollek-contract" }
dek-agent-binding = { path = "../dek-agent-binding" }
dek-fingerprint-defs = { path = "../dek-fingerprint-defs" }
opentelemetry = "0.26"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
tokio = { workspace = true, features = ["sync"] }
dirs = "6.0.0"
sha2 = "0.10"
regex = "1"
[lints]
workspace = true
