[package]
license = {workspace = true}

name = "dek-auth"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[dependencies]
jsonwebtoken = "9.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tracing = { workspace = true }

[lints]
workspace = true

