[package]
license = "Apache-2.0"

name = "dek-bundle-format"
version.workspace = true
edition.workspace = true

repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
semver = "1.0"

[lints]
workspace = true
