[package]
name = "dek-bundle-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
dek-config = { path = "../dek-config" }
dek-spire-node = { path = "../dek-spire-node" }
tracing.workspace = true
ed25519-dalek = "2.0"
base64 = "0.22.1"
rand = "0.10.1"
serde_jcs = "0.2.0"
jsonschema = "0.46.5"

[lints]
workspace = true
