[package]
name = "dek-bundle-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
dek-config = { path = "../dek-config" }
dek-spire-node = { path = "../dek-spire-node" }
tracing.workspace = true
ed25519-dalek = "2.0"
base64 = "0.22.1"
rand = "0.10.1"
serde_jcs = "0.2.0"
jsonschema = "0.46.5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
arc-swap = "1"
thiserror = "1"
[lints]
workspace = true
