[package]
license = {workspace = true}

name = "dek-bundle-sync"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
dek-config = { path = "../dek-config" }
dek-spire-node = { path = "../dek-spire-node" }
dek-domain-schema = { path = "../dek-domain-schema" }
tracing.workspace = true
ed25519-dalek = "2.0"
base64 = "0.22.1"
rand = "0.10.1"
serde_jcs = "0.2.0"
jsonschema.workspace = true
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
arc-swap = "1"
thiserror.workspace = true
dek-control-plane-api = { version = "0.1.0", path = "../dek-control-plane-api" }
dek-bundle-format = { version = "1.0.0-beta.1", path = "../dek-bundle-format" }
pollek-contract = { path = "../../contracts/generated/rust/pollek-contract" }

[lints]
workspace = true
