[package]
license = "Apache-2.0"

name = "dek-capability-registry"
version.workspace = true
edition.workspace = true

repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
dek-domain-schema = { path = "../dek-domain-schema" }
sysinfo = "0.36.1"

[lints]
workspace = true
