[package]
name = "dek-cedar"
version = "0.1.0"
edition = "2021"

[dependencies]
dek-policy-runtime = { path = "../dek-policy-runtime" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1.89"
cedar-policy = "4.11.0"

[lints]
workspace = true
