[package]
name = "dek-cedar"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
dek-plugin-sdk = { path = "../dek-plugin-sdk" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1.89"
cedar-policy = "4.11.0"
moka = { version = "0.12", features = ["sync"] }

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { workspace = true, features = ["full", "rt", "macros"] }
serde_json = { workspace = true }




