[package]
license = {workspace = true}

name = "dek-cedar"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[dependencies]
dek-plugin-sdk = { path = "../dek-plugin-sdk" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1.89"
cedar-policy = "4.11.0"
moka = { version = "0.12", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
serde_json = { workspace = true }




