[package]
license = {workspace = true}

name = "dek-cli"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[dependencies]
dek-ipc = { path = "../dek-ipc" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "signal", "net"] }
anyhow.workspace = true
dek-errors = { path = "../dek-errors" }
dek-consent = { path = "../dek-consent" }
dek-compliance-evidence = { path = "../dek-compliance-evidence" }
clap = { version = "4.5.4", features = ["derive"] }
dek-agent-connector = { path = "../dek-agent-connector" }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
dek-config = { version = "0.1.0", path = "../dek-config" }
dek-enroll = { path = "../dek-enroll" }
dek-spire-node = { path = "../dek-spire-node" }
dek-keystore = { path = "../dek-keystore" }
webbrowser = "1.2.1"
rustls.workspace = true
reqwest.workspace = true
rcgen = "0.13"

[dev-dependencies]
axum = "0.8"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
serde_json = { workspace = true }
x509-parser = "0.16"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "signal", "net"] }

[lints]
workspace = true
