[package]
name = "dek-compliance-evidence"
version = "0.1.0"
edition = {workspace = true}
license = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dek-config = { path = "../dek-config" }

[lints]
workspace = true
