[package]
name = "dek-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-appender = "0.2.5"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
