[package]
name = "dek-consent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true

[lints]
workspace = true
