[package]
license = "Apache-2.0"
name = "dek-control-plane-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
axum = "0.7"
pollek-contract = { path = "../../contracts/generated/rust/pollek-contract" }

[lints]
workspace = true
