[package]
license = {workspace = true}
name = "dek-control-plane-api"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
axum = "0.8"
pollek-contract = { path = "../../contracts/generated/rust/pollek-contract" }

[lints]
workspace = true
