[package]
name = "dek-core"
version = "0.1.0"
edition = "2021"
authors = ["Pollen DEK Team"]
license = "Apache-2.0"
description = "Pollen DEK Supervisor and Agent"

[dependencies]
dek-config = { path = "../dek-config" }
dek-agent-connector = { path = "../dek-agent-connector" }
dek-updater = { path = "../dek-updater" }
dek-bundle-sync = { path = "../dek-bundle-sync" }
dek-keystore = { path = "../dek-keystore" }
dek-ipc = { path = "../dek-ipc" }
dek-ebpf-common = { path = "../dek-ebpf-common" }
dek-ebpfd = { path = "../dek-ebpfd" }
dek-wasm-host = { path = "../dek-wasm-host" }
dek-policy-router = { path = "../dek-policy-router" }
dek-openfga = { path = "../dek-openfga" }
dek-cedar = { path = "../dek-cedar" }
dek-router-builder = { path = "../dek-router-builder" }
dek-telemetry = { path = "../dek-telemetry" }
dek-activation = { path = "../dek-activation" }
dek-spire-node = { path = "../dek-spire-node" }
dek-decision = { path = "../dek-decision" }
dek-policy-runtime = { path = "../dek-policy-runtime" }
axum = "0.7"
arc-swap = "1.7"
tokio.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-retry = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
futures = "0.3"
uuid = { version = "1.23.1", features = ["v4"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
self-replace = "1.5.0"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
serde = { workspace = true, features = ["derive"] }
x509-parser = "0.16"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
walkdir = "2.3"
axum = "0.7"
rcgen = { version = "0.11", features = ["pem", "x509-parser"] }
time = "0.3"
tempfile = "3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
x509-parser = "0.16"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4.1"
libc = "0.2"

[lints]
workspace = true
