[package]
name = "dek-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors = ["Pollen DEK Team"]
description = "Pollen DEK Supervisor and Agent"

[dependencies]
dek-config = { path = "../dek-config" }

dek-bundle-sync = { path = "../dek-bundle-sync" }
dek-policy-syncer = { path = "../dek-policy-syncer" }


dek-domain-schema = { path = "../dek-domain-schema" }
dek-keystore = { path = "../dek-keystore" }
dek-ipc = { path = "../dek-ipc" }

dek-ebpfd = { path = "../dek-ebpfd" }
dek-wasm-host = { path = "../dek-wasm-host" }
dek-policy-router = { path = "../dek-policy-router" }



dek-telemetry = { path = "../dek-telemetry" }
dek-activation = { path = "../dek-activation" }
dek-spire-node = { path = "../dek-spire-node" }
dek-decision = { path = "../dek-decision" }
dek-policy-runtime = { path = "../dek-policy-runtime" }
axum = "0.7"
arc-swap = "1.7"
tokio.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

metrics = "0.22"

futures = "0.3"
uuid = { version = "1.23.1", features = ["v4"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
self-replace = "1.5.0"


serde = { workspace = true, features = ["derive"] }
x509-parser = "0.16"
dek-enforcement-api = { path = "../dek-enforcement-api" }
chrono.workspace = true

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
walkdir = "2.3"
axum = "0.7"
rcgen = { version = "0.11", features = ["pem", "x509-parser"] }
time = "0.3"
tempfile = "3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
x509-parser = "0.16"
dek-pdp-sdk = { workspace = true }


[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
dek-windows-wfp = { path = "../dek-windows-wfp" }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4.1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
dek-macos-nefilter = { path = "../dek-macos-nefilter" }

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Pollen DEK Team"
copyright = "2026 Pollen"
license-file = ["../../LICENSE", "4"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["../../target/release/dek-core", "usr/bin/", "755"],
    ["../../target/release/dek-mcp-proxy", "usr/bin/", "755"],
    ["../../target/release/dek-updater", "usr/bin/", "755"],
    ["../../packaging/linux/pollen-dek.service", "lib/systemd/system/pollen-dek.service", "644"]
]
maintainer-scripts = "../../packaging/linux/scripts"

