[package]
license = "Apache-2.0"

name = "dek-core"
version = "0.1.0"
edition = "2021"

authors = ["Pollek DEK Team"]
description = "Pollek DEK Supervisor and Agent"

[features]
default = ["full"]
minimal = []
desktop = ["os-enforcement"]
gateway = ["os-enforcement"]
full = ["desktop", "gateway"]
os-enforcement = [
    "dep:dek-windows-wfp",
    "dep:dek-ebpfd",
    "dep:dek-ebpf-common",
    "dep:dek-macos-nefilter"
]

[dependencies]
dek-config = { path = "../dek-config" }
dek-consent = { path = "../dek-consent" }

dek-bundle-sync = { path = "../dek-bundle-sync" }
dek-bundle-format = { path = "../dek-bundle-format" }
dek-policy-syncer = { path = "../dek-policy-syncer" }


dek-domain-schema = { path = "../dek-domain-schema" }
dek-keystore = { path = "../dek-keystore" }
dek-ipc = { path = "../dek-ipc" }

dek-wasm-host = { path = "../dek-wasm-host" }
dek-policy-router = { path = "../dek-policy-router" }



dek-telemetry = { path = "../dek-telemetry" }
dek-activation = { path = "../dek-activation" }
dek-spire-node = { path = "../dek-spire-node" }
dek-decision = { path = "../dek-decision" }
dek-policy-runtime = { path = "../dek-policy-runtime" }
dek-a2a-mediator = { path = "../dek-a2a-mediator" }
dek-policy-presets = { path = "../dek-policy-presets" }
dek-agent-observer = { path = "../dek-agent-observer" }
axum = "0.8"
arc-swap = "1.7"
tokio = { workspace = true, features = ["signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true

metrics = "0.24"

futures = "0.3"
uuid = { version = "1.23.1", features = ["v4"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
self-replace = "1.5.0"


serde = { workspace = true, features = ["derive"] }
x509-parser = "0.16"
dek-enforcement-api = { path = "../dek-enforcement-api" }
chrono.workspace = true
rcgen = "0.13"
dek-secure-spool = { version = "0.1.0", path = "../dek-secure-spool" }
dek-errors = { version = "0.1.0", path = "../dek-errors" }
mimalloc = "0.1.52"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "signal", "net"] }
walkdir = "2.3"
axum = "0.8"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
time = "0.3"
tempfile = "3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
x509-parser = "0.16"
dek-pdp-sdk = { workspace = true }


[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
dek-windows-wfp = { path = "../dek-windows-wfp", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4.1"
libc = "0.2"
dek-ebpfd = { path = "../dek-ebpfd", optional = true }
dek-ebpf-common = { path = "../dek-ebpf-common", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
dek-macos-nefilter = { path = "../dek-macos-nefilter", optional = true }

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Pollek DEK Team"
copyright = "2026 Pollek"
license-file = ["../../LICENSE", "4"]
depends = "$auto"
compression-type = "xz"
section = "admin"
priority = "optional"
assets = [
    ["target/release/dek-core", "usr/bin/", "755"],
    ["target/release/dek-mcp-proxy", "usr/bin/", "755"],
    ["target/release/dek-updater", "usr/bin/", "755"],
    ["../../packaging/linux/pollek-dek.service", "lib/systemd/system/pollek-dek.service", "644"]
]
maintainer-scripts = "../../packaging/linux/scripts"

