[package]
license = {workspace = true}

name = "dek-decision"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
futures = "0.3.32"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true

