[package]
license = {workspace = true}

name = "dek-domain-schema"
version = "0.1.0"
edition = "2024"
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
url = "2.5.8"
chrono.workspace = true
sha2 = "0.11.0"
pollek-contract = { path = "../../contracts/generated/rust/pollek-contract" }

[lints]
workspace = true
