[package]
license = {workspace = true}

name = "dek-ebpf-common"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", optional = true }

[lints]
workspace = true

[features]
user = ["aya"]
