[package]
name = "dek-ebpf-prog"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

# IMPORTANT: this crate compiles to BPF bytecode, NOT a normal host binary.
# Build with:
#   cargo +nightly build -p dek-ebpf-prog \
#     --target bpfel-unknown-none -Z build-std=core --release
# Requires: rustup component add rust-src (nightly) + `cargo install bpf-linker`.

[dependencies]
# aya 0.13's BPF-side crate is `aya-ebpf` (renamed from `aya-bpf`). This fixes
# the version mismatch with the `aya = "0.13"` userspace loader in dek-ebpfd.
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1.0"
dek-ebpf-common = { path = "../dek-ebpf-common" }
network-types = "0.0.6"

[[bin]]
name = "dek-ebpf-prog"
path = "src/lib.rs"

[features]
default = []


