[package]
name = "dek-ebpfd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hickory-proto = "0.24.1"
bytes = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
dek-ebpf-common = { path = "../dek-ebpf-common" }

