[package]
license = "Apache-2.0"
name = "dek-ebpfd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hickory-proto = "0.26.1"
bytes = "1.0"
dek-domain-schema = { path = "../dek-domain-schema" }
blake3 = "1.8.5"
byteorder = "1.5.0"
dek-secure-spool = { version = "0.1.0", path = "../dek-secure-spool" }
chrono = { workspace = true, features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
dek-ebpf-common = { path = "../dek-ebpf-common", features = ["user"] }

[build-dependencies]
aya-build = "=0.1.2"
cargo_metadata = "0.19.2"

[features]
# Opt-in on real Linux deployments: enables the aya pinned-map writer in
# map_updater so compiled policy is written into the kernel VERDICT/PORTS/
# CGROUP maps. Off by default (and unused off-Linux) so unprivileged CI builds
# and non-Linux hosts compile the validated no-op path instead.
kernel-maps = []

[lints]
workspace = true
